# offline-translator-linux

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile.aarch64  README.md  build.rs  build.sh  check_vers_match.sh  clickable.yaml  run.sh  run_phone.sh  screeny.sh
clickable/: .gitignore  clickable.yaml  manifest.json  package-click.sh  run-local.sh  snapcraft.yaml  translator.desktop
data/: catalog.json  index.json
packaging/: README.md
packaging/postmarketos/: APKBUILD  Dockerfile  build-apk-docker.sh  dev-build.sh  offline-translator-linux.desktop  ruy-cpuinfo-default.patch
packaging/ubuntu-touch/: manifest.json  translator.apparmor  translator.desktop
qml/: AppTheme.qml  CircularProgress.qml  DarkComboBox.qml  DarkSlider.qml  DarkSwitch.qml  DesktopImagePicker.qml  DesktopImageShare.qml  DictionaryPopup.qml  FeedbackIconButton.qml  LanguageCatalogBrowser.qml  LanguageListView.qml  LanguageRow.qml  Main.qml  ManageLanguagesScreen.qml  PageHeader.qml  PlaceholderText.qml  SettingsScreen.qml  SetupScreen.qml  TopBar.qml  TranslatedImageView.qml  TranslationScreen.qml  UbportsImagePicker.qml  UbportsImageShare.qml  UiScale.qml
scripts/: prepare_onnxruntime.sh
src/: catalog_state.rs  data.rs  download.rs  eventloop.rs  image_ocr.rs  index.rs  main.rs  model.rs  pulse.rs  rendered_image_item.rs  settings.rs  translate.rs  tts.rs  ui.rs
src/ui/: callbacks.rs  core.rs  dictionary.rs  image.rs  languages.rs  transliteration.rs  tts.rs  types.rs
ui/: app-window.slint  button.slint  floating-action-button.slint  icon-button.slint  labeled-checkbox.slint  language-item.slint  language-selector.slint  language.slint  manage-languages-component.slint  manage-languages-screen.slint  missing-language-card.slint  navigation.slint  no-languages-screen.slint  settings-screen.slint  tabbed-view.slint  text-input-area.slint  theme.slint  top-bar.slint  translation-output-area.slint  translation-screen.slint
