[package]
name = "offline-translator-linux"
version = "0.1.0"
edition = "2024"

[dependencies]
cld2 = { git = "https://github.com/DavidVentura/rust-cld2.git" }
#cld2 = { path = "../rust-cld2" }
ureq = "3.1.2"
qmetaobject = "0.2"
qttypes = "0.2"
cpp = "0.5"
flate2 = "1.0"
rayon = "1.10"
translator = { git = "https://github.com/DavidVentura/translator-rs.git", features = ["tesseract", "tts", "transliterate", "mucab"] }
whoami = { version = "1.6.1", default-features = false }
zip = "2.4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[profile.dev]
#debug = false
debug = "line-tables-only"

[profile.release]
lto = "thin"
strip = "symbols"

[build-dependencies]
cpp_build = "0.5"
